--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,12 @@
+# 忘れるのでメモ
+# 横分割    : -
+# 縦分割    : |
+# 分割解除  : !
+# デタッチ  : d
+# アタッチ  : a
+# 指定      : a -t name
+# 名前変更  : ,
+
 set-option -g default-terminal "xterm"
 
 set-option -g prefix C-t
