--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,9 @@ set -sg escape-time 1
 
 set-option -g base-index 1
 
-set-window-option -g mode-mouse on
+set -g mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
 set-option -g renumber-windows on
 
