--- a/.gitconfig
+++ b/.gitconfig
@@ -23,5 +23,5 @@
 [push]
 	default = simple
 [user]
-	name = tyamagu2
-  email = tyamagu2@gmail.com
+  name = itodaisuke
+  email = jabropt@gmail.com
