--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
   cb = checkout -b
   b = branch
   ba = branch -a
+  br = browse-remote
   d = diff
   dw = diff --ignore-all-space
   dc = diff --cached
@@ -25,3 +26,9 @@
 [user]
   name = itodaisuke
   email = jabropt@gmail.com
+[browse-remote "github.com"]
+	top = https://{host}/{path}
+	ref = https://{host}/{path}/tree/{short_ref}
+	rev = https://{host}/{path}/commit/{commit}
+	pr = https://{host}/{path}/pull/{short_ref}
+	file = "https://{host}/{path}/{file.directory? and :tree or :blob}/{short_rev}/{file}{lines && \"#L%s\" % lines.join(\"-\")}"
