Fix excludesfile path in .gitignore

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
   rb = rebase
 [core]
 	editor = emacs
-	excludesfile = /Users/tyamagu2/.global_gitignore
+	excludesfile = ~/.gitignore
 [pager]
   log = diff-highlight | less
   show = diff-highlight | less
